# rmessenger

./: Cargo.toml  LICENSE  README.md
examples/: send_text_message.rs
src/: main.rs
src/bot/: graph_api.rs  mod.rs  utils.rs
