[package]
name = "rmessenger"
version = "0.0.3"
authors = ["nocotan <noconoco.lib@gmail.com>"]
repository = "https://github.com/nocotan/rmessenger"
keywords = ["facebook", "bot"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
description = "A Rust Wrapper for the FaceBook Messenger Bot API"

[dependencies]
multipart = "0.8.1"
hyper = "0.9.10"
