[package]
name = "rmessenger"
version = "0.0.4"
authors = ["nocotan <noconoco.lib@gmail.com>"]
repository = "https://github.com/nocotan/rmessenger"
keywords = ["facebook", "bot"]
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
description = "A Rust Wrapper for the FaceBook Messenger Bot API"

[dependencies]
hyper = { git = "https://github.com/hyperium/hyper", branch = "master" }
tokio-core = "0.1.6"
futures = "0.1.11"
url = "1.4.0"
